--- a/contracts/package.json
+++ b/contracts/package.json
@@ -40,6 +40,7 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "@openzeppelin/contracts": "^4.8.2",
     "dotenv": "^16.0.3",
     "web3": "^1.8.2"
   }
