--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,10 @@
     "format:fix": "prettier --write --ignore-path .gitignore ."
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.5.1",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@fontsource/inter": "^4.5.15",
     "@metamask/detect-provider": "^2.0.0",
     "@metamask/onboarding": "^1.0.1",
     "@next/font": "13.1.2",
@@ -18,14 +22,16 @@
     "@taikai/rocket-kit": "3.0.0-beta.3",
     "@types/react-dom": "18.0.10",
     "eslint-config-next": "13.1.2",
+    "formik": "^2.2.9",
+    "framer-motion": "^10.5.0",
     "next": "13.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "^5.3.6",
     "swr": "^2.0.0",
     "typescript": "4.9.4",
-    "web3-utils": "^1.8.1",
-    "web3": "1.7.4"
+    "web3": "1.7.4",
+    "web3-utils": "^1.8.1"
   },
   "devDependencies": {
     "@typechain/ethers-v5": "^10.2.0",
