--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,9 +18,12 @@
     "@metamask/detect-provider": "^2.0.0",
     "@metamask/onboarding": "^1.0.1",
     "@next/font": "13.1.2",
+    "@sismo-core/zk-connect-react": "^0.0.2",
+    "@sismo-core/zk-connect-server": "^0.0.2",
     "@taikai/dappkit": "2.1.10",
     "@taikai/rocket-kit": "3.0.0-beta.3",
     "@types/react-dom": "18.0.10",
+    "axios": "^1.3.4",
     "eslint-config-next": "13.1.2",
     "formik": "^2.2.9",
     "framer-motion": "^10.5.0",
