--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "formik": "^2.2.9",
     "framer-motion": "^10.5.0",
     "next": "13.0.4",
+    "next-base64": "^1.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "^5.3.6",
