--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,3 +1,8 @@
-NEXT_PUBLIC_CHAIN_ID=1500
-CORS_ALLOWED_ORIGIN=false
+NEXT_PUBLIC_CHAIN_ID=
+CORS_ALLOWED_ORIGIN=
 NEXT_PUBLIC_SUBMISSION_CONTRACT_ADDRESS=
+NEXT_PUBLIC_SISMO_APP_ID=
+NEXT_PUBLIC_BOUNTY_CONTRACT_ADDRESS=
+NEXT_PUBLIC_OWNER=
+NEXT_PUBLIC_BOUNTY_CONTRACT_ADDRESS=
+NEXT_PUBLIC_EXAMPLE_ADDRESS=
